# Huawei-CodeCraft-2025

./: !!!meta.json  .gitignore  README.md  run.bat  runDemo.bat  runDemo.sh  runLinuxCode.sh  runLinuxCodeWithPractice.sh  策略.txt  简单读策略.txt
README/: 规划策略.pptx
code/: CMakeLists.txt  CircularList.h  RBTree.h  bplusTree.h  bridge.hpp  bucketData.h  bufferSpace.h  circularLinkedList.h  disk.h  disk.hpp  global.h  main.cpp  noncopyable.h  object.cpp  object.h  operation.h  pocketWatch.h  test.cpp  test.h  thinker.h  watch.cpp  watch.h  worker.cpp  worker.h
code/tools/: .gitignore  CMakeLists.txt  LogFile.cpp  LogFile.h  LogFileManager.h  LogFileTest.cpp  Logger.cpp  Logger.h  Singleton.h
codec/: bplusTree.h  bridge.hpp  bucketData.cpp  bucketData.h  bufferSpace.h  circularLinkedList.h  disk.h  global.h  object.cpp  object.h  watch.cpp  watch.h  worker.h
data/: dataInspect.ipynb  dataInspect.py  dataObject.py  test.py
linuxCode/: .diskManager.h.swp  LogTool.h  RBTree.h  bplusTree.cpp  bplusTree.h  bucketData.cpp  bucketData.h  bufferSpace.h  circularLinkedList.cpp  circularLinkedList.h  common.h  complexTokensCalVersion.h  disk.h  diskManager.h  global.h  headPlanner.cpp  headPlanner.h  headPlanner2.h  indicator.cpp  indicator.h  logInfo.cpp  main.cpp  object.cpp  object.h  readBlock.h  strategy.h  strategyExactProfitMultiRead.cpp  strategySimpleMultiRead.cpp  test.h  (+4 more)
test/: .gitignore  CMakeLists.txt  bplusTree.h  testc.cpp
test/bplusTreeTest/: test.cpp
test/circularLinkedListTest/: test.cpp
test/logToolTest/: LogFileTest.cpp
test/systemTest/: main.cpp
(+110 files in other folders)
